Fix div height respresentation on mobile

--- a/IlijaLalkovski/Project1/styles.css
+++ b/IlijaLalkovski/Project1/styles.css
@@ -117,7 +117,7 @@ footer h3 {
     }
 
     #photos div{
-        height: 496px;
+        height: 100%;
         background-color: #2a2a2a;
     }
 }
